# android-rom-repacker

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.travis/common/: post-upload.sh
.travis/linux/: build.sh  deps.sh  docker.sh  upload.sh
CMakeModules/: Current.cmake  Default-AOSP.cmake  Default-LINEAGE.cmake  Default.cmake  Macros.cmake
ExternalModules/: core.cmake  extras.cmake  libselinux.cmake  selinux.cmake
src/: .clang-format  label_file2.h  sefcontext_decompile.c
